# Project-Ruin

./: CMakeLists.txt  RuinConfig.h.in
assets/shaders/: standardFragment.glsl  standardGeometry.glsl  standardVertex.glsl
cmake/Modules/: FindSDL2.cmake
include/: image.h  shader.h  texture.h  units.h  window.h
src/: image.cpp  main.cpp  shader.cpp  texture.cpp  window.cpp
